test/stage2/test_11810517_1.spl
int x;

int f(int a, int b) {
	int y;
	a = 10;
	b = a;
	z = 10;
}